hphp/hack/test/typecheck/inout/bad_inout_use_assign1.php
<?hh // strict

function f(inout int $i): void {
  $i = 'foo';
}
